--- a/codlab2/package.json
+++ b/codlab2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codlab2",
+  "name": "codelab2",
   "version": "1.0.0",
   "description": "Coding Lab 2",
   "main": "findMinMax.js",
@@ -7,5 +7,19 @@
     "test": "jasmine"
   },
   "author": "Usman Babakolo",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/usmansbk/Andela_Bootcamp_day_1.git"
+  },
+  "keywords": [
+    "findMinMax"
+  ],
+  "bugs": {
+    "url": "https://github.com/usmansbk/Andela_Bootcamp_day_1/issues"
+  },
+  "homepage": "https://github.com/usmansbk/Andela_Bootcamp_day_1#readme"
+  "dependencies": {
+  	"jasmine":"^2.6.0"
+  }
 }
